--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2019.11.28
 chardet==3.0.4
 decorator==4.4.1
 deprecation==2.0.7
+fire==0.2.1
 idna==2.8
 jsonpath-ng==1.4.3
 jsonpath-rw==1.4.0
@@ -17,4 +18,5 @@ requests==2.22.0
 requests-cache==0.5.2
 six==1.13.0
 squareup==3.20191120.0
+termcolor==1.1.0
 urllib3==1.25.7
