--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ squareup==3.20191120.0
 urllib3==1.25.7
 google==2.0.3
 google-cloud-logging==1.14.0
+google-api-core==1.16.0
+google-auth==1.10.1
+google-cloud-core==1.1.0
+google-cloud-firestore==1.6.1
+googleapis-common-protos==1.50.0
