--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,11 @@ requests==2.22.0
 six==1.13.0
 squareup==3.20191120.0
 urllib3==1.25.7
-google==2.0.3
-google-cloud-logging==1.14.0
 google-api-core==1.16.0
 google-auth==1.10.1
 google-cloud-core==1.1.0
 google-cloud-firestore==1.6.1
+google-cloud-logging==1.14.0
+google-cloud-pubsub==1.1.0
+google==2.0.3
 googleapis-common-protos==1.50.0
