--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,6 @@ google-cloud-core==1.1.0
 google-cloud-firestore==1.6.1
 google-cloud-logging==1.14.0
 google-cloud-pubsub==1.1.0
+google-cloud-secret-manager==0.1.1
 google==2.0.3
 googleapis-common-protos==1.50.0
